--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 		<link rel="stylesheet" type="text/css" href="style.css">
 	</head>
 	<body>
-		<h1>Un Super Titre</h1>
+		<h1>UN SUPER TITRE!</h1>
 	</body>
 </html>
 
